# omnimesh

./: .env.example  .gitignore  .gitmodules  ACTUALIZATION_REPORT.md  BULLETPROOF_CICD_README.md  C2_CENTER_GUIDE.md  COMMON_USER_GUIDE.md  COMPLETE_OMNIMESH_AUDIT.json  CONTRIBUTING.md  DAMOCLES_PROTOCOL_ENFORCEMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS.md  EXECUTION_STATUS_COMPLETE.md  GITHUB_SETUP.md  INSTALLATION_GUIDE.md  INTEGRATION_ANALYSIS.md  INTELLIGENT_CICD_README.md  LICENSE  Makefile  Makefile.backup  Makefile.backup.1753504185  Makefile.old  OMNITIDE MANIFEST PRIME.md  OMNITIDE_CODEX.md  PHASE4_VALIDATION_REPORT.json  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RECURSIVE_IMPROVEMENT_ANALYSIS.md  SECURITY.md  SECURITY_FRAMEWORK.md  SECURITY_HARDENING_COMPLETION.md  SYSTEM_STATUS_ULTIMATE.md  TIGER_LILY_ACTIVATION_COMPLETE.md  TIGER_LILY_COMPLIANCE_COMPLETE.md  TRANSFORMATION_COMPLETE.md  TRINITY_RELEASE_SUMMARY.json  TUI_CLI_ENHANCEMENT_PLAN.md  USER_GUIDE.md  WEB_INTERFACE_GUIDE.md  (+48 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: bulletproof-success.yml  code-quality.yml  docs-ci.yml  emergency-repair.yml  frontend-ci.yml  go-ci.yml  optional-tests.yml  python-ci.yml  release-deploy.yml  rust-ci.yml  security-production-pipeline.yml  self-healing-master.yml  sovereign-ci-cd-pipeline.yml  trinity-ci.yml
BACKEND/: build.sh
BACKEND/data-fabric/: README.md
BACKEND/k8s/: README.md
FRONTEND/ui-solidjs/: .env  .eslintrc.js  .gitattributes  (+27 more)
agents-ai/: README.md
agents-chromeos/: README.md
config/: nexus_config.toml
core/: build_system.py  nexus_orchestrator.py  nexus_orchestrator_old.py
core/agents/: __init__.py  behavior_monitor.py  exwork_agent.py  noa_module.py  proactive_trigger.py  pyproject.toml
core/agents/handlers/: api_handlers.py
core/agents/models/: action.py
data-fabric/: README.md
docs/: PRODUCTION_DEPLOYMENT.md  USER_GUIDE.md
go-node-proxies/: Dockerfile  auto-swarm-join.sh  build.sh  copilot-instructions-go-node-proxies.md  entrypoint.sh  fabric_pb2.py  fabric_pb2_grpc.py  generate_proto.sh  go.mod  main.go  main_test.go  telemetry_exporter.sh
infrastructure/: README.md  variables.tf
k8s/: README.md
nexus-prime-core/: Cargo.toml  Cargo.toml.full
nexus-prime-core/gen_proto/: main.rs
nexus-prime-core/src/: lib.minimal.rs  lib.rs  main.minimal.rs  main.rs  security.rs
nexus-prime-core/src/fabric_proto/: fabric.rs
nexus-prime-core/src/observability/: mod.rs  structured_logging.rs  tracing.rs
nexus-prime-core/tests/: integration_test.rs
scripts/: auto-push-omnimesh.sh  deploy.sh  final-demo.sh  production-deploy.sh  setup-dev.sh  verify.sh
security-audit-results/: frontend-dependencies-20250707_174128.json  npm-audit-20250707_174128.json
security-feedback/: improvement-queue.json  security-metrics.json  security-report-20250707.md  tiger-lily-metrics.json
tests/: integration_test.sh
trinity/: .gitignore  EMERGENCY_COMPLETE_INTEGRATION_MANIFEST.json  Makefile  TRINITY_COMPLETE_INTEGRATION_MANIFEST.json  TRINITY_COMPLETION_MANIFEST.json  TRINITY_ENHANCED_MANIFEST.json  TRINITY_FINAL_STATUS.md  TRINITY_LIVE_DEMONSTRATION_REPORT.json  TRINITY_MANIFEST.json  TRINITY_ZERO_TOUCH_REPAIR_REPORT.json  agent_exwork_clean.py  nexus_cli.py  omni_orchestrator.css  omni_tui.css  trinity_complete_demo.py  trinity_working_demo.py
trinity/platform/rust_engine/: Cargo.toml  copilot-instructions-nexus-prime-core.md  gen_proto.rs
trinity/platform/rust_engine/src/: config.rs
trinity/platform/rust_engine/src/observability/: distributed_tracing.rs
ui-flutter/: README.md
ui-solidjs/: README.md
(+235 files in other folders)
