# nexus-prime-core/Cargo.toml

[package]
name = "nexus-prime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] } # Enable sync feature for BroadcastStream
parking_lot = "0.12" # Lighter mutex for performance critical scenarios if needed
log = "0.4" # Logging facade
env_logger = "0.11" # Simple logger implementation
axum = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = "0.27.0"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
bincode = "1.3.3"

# Advanced database and storage
rocksdb = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
async-trait = "0.1"
thiserror = "1.0"

# Security and TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
x509-parser = "0.16"
base64 = "0.22"

# Advanced monitoring and telemetry
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"
opentelemetry-jaeger = "0.20"
hostname = "0.3"
regex = "1.10"

# Configuration management
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

# Distributed consensus (simplified for now)
# raft = "0.7"
# raft-proto = "0.7"

[build-dependencies]
tonic-build = "0.11" # Only needed for compiling .proto files
