[tool.poetry]
name = "agent-ex-work"
version = "3.0.0"
description = "The Genesis Agent - UMCC's Primary Autonomous Agent"
authors = ["The Architect <architect@umcc.nexus>"]
readme = "README.md"
packages = [{include = "agent_ex_work"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.25.0"
loguru = "^0.7.2"
toml = "^0.10.2"
httpx = "^0.25.0"
psutil = "^5.9.6"
cryptography = "^41.0.0"
requests = "^2.31.0"
aiofiles = "^23.2.1"
pandas = "^2.1.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
openai = "^1.3.0"
anthropic = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
