[package]
name = "nexus-prime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1"
thiserror = "1.0"
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

[build-dependencies]
tonic-build = "0.11"
